# aoc-lib

./: Cargo.toml  README.md
.github/workflows/: rust.yml
aoc-macro/: Cargo.toml
aoc-macro/src/: lib.rs
src/: client.rs  day.rs  lib.rs  util.rs
