[package]
name = "aoc-lib"
version = "0.1.0"
edition = "2021"
authors = ["Keval Kapdee <keval@thechubbypanda.net>"]
description = "A library that lets you focus on problem-solving rather than boilerplate when doing Advent of Code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thechubbypanda/aoc-lib"

[lib]
name = "aoc"
path = "src/lib.rs"

[dependencies]
home = "0.5.3"
paste = "1.0.6"